--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weather-js",
   "version": "1.0.1",
-  "description": "Weather module can be used for obtaining weather information.",
+  "description": "Weather is a module for obtaining weather information.",
   "keywords": [
     "weather",
     "forecast"
