--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "A module for obtaining weather information",
   "main": "index.js",
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha --reporter spec test/test-all.js"
+    "lint": "jshint --reporter node_modules/jshint-stylish *.js test/*.js",
+    "lint:build": "jshint --reporter checkstyle *.js test/*.js > reports/jshint-checkstyle.xml",
+    "depcheck": "dependency-check . *.js",
+    "depcheck:unused": "dependency-check ./package.json --unused --no-dev *.js",
+    "test:unit": "mkdir -p reports/ && NODE_ENV=test multi='spec=- xunit=reports/mocha-xunit.xml' istanbul cover _mocha -- --timeout 10000 -R mocha-multi && istanbul check-coverage",
+    "test:coveralls": "cat reports/coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
+    "test": "npm run lint && npm run test:unit"
   },
   "repository": {
     "type": "git",
@@ -22,7 +28,13 @@
     "xml2js": "0.4.x"
   },
   "devDependencies": {
+    "chai": "3.5.x",
+    "jshint": "2.9.x",
+    "jshint-stylish": "2.2.x",
     "mocha": "3.2.x",
-    "chai": "3.5.x"
+    "mocha-multi": "0.10.x",
+    "dependency-check": "2.8.x",
+    "istanbul": "0.4.x",
+    "coveralls": "^2.11.16"
   }
 }
