--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:build": "jshint --reporter checkstyle *.js test/*.js > reports/jshint-checkstyle.xml",
     "depcheck": "dependency-check . *.js",
     "depcheck:unused": "dependency-check ./package.json --unused --no-dev *.js",
-    "test:unit": "mkdir -p reports/ && NODE_ENV=test multi='spec=- xunit=reports/mocha-xunit.xml' istanbul cover _mocha -- --timeout 10000 -R mocha-multi && istanbul check-coverage",
+    "test:unit": "mkdir -p reports/ && NODE_ENV=test multi='spec=- xunit=reports/mocha-xunit.xml' istanbul cover _mocha -- -R mocha-multi --timeout 10000 && istanbul check-coverage",
     "test:coveralls": "cat reports/coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "test": "npm run lint && npm run test:unit"
   },
